# GenshinBOT

./: Procfile  keep_alive.py  main.py  pyproject.toml  requirements.txt
